--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,7 +75,7 @@
             app:cardCornerRadius="8dp">
 
             <LinearLayout
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="1dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
@@ -186,6 +186,9 @@
                     tools:srcCompat="@tools:sample/avatars" />
 
                 <LinearLayout
+                    android:id="@+id/linearBallard"
+                    android:clickable="true"
+                    android:focusable="true"
                     android:layout_width="294dp"
                     android:layout_height="match_parent"
                     android:background="@color/white"
@@ -197,7 +200,7 @@
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="10dp"
                         android:layout_marginStart="5dp"
-                        android:text="Test de Ballard"
+                        android:text="Puntuación de Dubowitz"
                         android:textStyle="bold"/>
 
                     <TextView
@@ -205,7 +208,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
                         android:layout_marginStart="5dp"
-                        android:text="Evaluación de madurez neuromuscular y física" />
+                        android:text="Evaluación física y neurologica detallada" />
                 </LinearLayout>
 
             </LinearLayout>
