--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -238,6 +238,9 @@
                     tools:srcCompat="@tools:sample/avatars" />
 
                 <LinearLayout
+                    android:id="@+id/linearMadurezCutanea"
+                    android:clickable="true"
+                    android:focusable="true"
                     android:layout_width="294dp"
                     android:layout_height="match_parent"
                     android:background="@color/white"
